Add member api/logout Routes, controller, Unit test, Swagger Docs
